# Depth-Estimation-on-CM2290-with-SNPE-on-Android

./: README.md
Depth_Estimation_App/: settings.gradle
Depth_Estimation_App/app/: build.gradle
Depth_Estimation_App/app/src/androidTest/java/example/depthestimation/: ExampleInstrumentedTest.java
Depth_Estimation_App/app/src/main/: AndroidManifest.xml
Depth_Estimation_App/app/src/main/cpp/: CMakeLists.txt  Depth.cpp  Depth.h  Image_Reader.cpp  Image_Reader.h  Native_Camera.cpp  Native_Camera.h  Util.h  native-lib.cpp  qcsnpe.cpp  qcsnpe.hpp
Depth_Estimation_App/app/src/main/java/com/example/depthestimation/: MainActivity.java
Depth_Estimation_App/app/src/main/res/layout/: activity_main.xml
Depth_Estimation_App/app/src/main/res/values/: themes.xml
Depth_Estimation_App/app/src/main/res/values-night/: themes.xml
output_video/: depth_video.avi
